# pitch

./: .gitignore  README.md  pyproject.toml  report.md  required_format.md
src/pitch/: api.py  crew.py  main.py  status_manager.py
src/pitch/config/: agents.yaml  tasks.yaml
src/pitch/static/: index.html  script.js  styles.css
src/pitch/tools/: document_tools.py  knowledge_base.py
