[project]
name = "pitch"
version = "0.1.0"
description = "pitch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "python-pptx>=0.6.22",
    "pypdf>=4.0.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20"
]

[project.scripts]
pitch = "pitch.main:run"
run_crew = "pitch.main:run"
serve = "uvicorn:run"
train = "pitch.main:train"
replay = "pitch.main:replay"
test = "pitch.main:test"

[project.entry-points."uvicorn.run"]
pitch = "pitch.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
